Modul_7/Cw2_reguly/dumpster.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumpster-svc
spec:
  selector:
    app: dumpster-dep
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumpster-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dumpster-dep
  template:
    metadata:
      labels:
        app: dumpster-dep
    spec:
      containers:
      - name: dumpster-dep
        image: gutek/dumpster:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
