Modul_7/Cw2_reguly/echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  selector:
    app: echo-dep
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-dep
  template:
    metadata:
      labels:
        app: echo-dep
    spec:
      containers:
      - name: echo-dep
        image: gcr.io/google_containers/echoserver:1.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
