Modul_7/Cw2_reguly/helloapp_multi.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp-multi-svc
spec:
  selector:
    app: helloapp-multi-dep
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-multi-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloapp-multi-dep
  template:
    metadata:
      labels:
        app: helloapp-multi-dep
    spec:
      containers:
      - name: helloapp-multi-dep
        image: poznajkubernetes/helloapp:multi
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
