Modul_7/Cw2_reguly/helloapp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp-svc-svc
spec:
  selector:
    app: helloapp-svc-dep
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-svc-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloapp-svc-dep
  template:
    metadata:
      labels:
        app: helloapp-svc-dep
    spec:
      containers:
      - name: helloapp-svc-dep
        image: poznajkubernetes/helloapp:svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
