Modul_7/Cw2_reguly/ingress_backed.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-default-backend
spec:
  backend:
    serviceName: dumpster-svc
    servicePort: 80
