Modul_7/Cw2_reguly/ingress_fanout.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: helloapp-svc-svc
          servicePort: 80
      - path: /v2
        backend:
          serviceName: helloapp-multi-svc
          servicePort: 80
