Modul_7/Cw2_reguly/ingress_mix.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-mix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.192-168-99-111.nip.io
    http:
      paths:
      - backend:
          serviceName: helloapp-multi-svc
          servicePort: 80
  - host: mix.192-168-99-111.nip.io
    http:
      paths:
      - path: /echo/?(.*)
        backend:
          serviceName: echo-svc
          servicePort: 80
      - path: /app
        backend:
          serviceName: helloapp-svc-svc
          servicePort: 80
      - backend:
          serviceName: dumpster-svc
          servicePort: 80
