Modul_7/Cw2_reguly/ingress_virthost.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-virthost
spec:
  rules:
  - host: echo.192-168-99-111.nip.io
    http:
      paths:
      - backend:
          serviceName: echo-svc
          servicePort: 80
  - host: dump.192-168-99-111.nip.io
    http:
      paths:
      - backend:
          serviceName: dumpster-svc
          servicePort: 80
